--- a/blg-security/blg-admin/src/main/resources/templates/login.html
+++ b/blg-security/blg-admin/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>人人权限系统</title>
+  <title>商品系统管理平台</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap.min.css">
@@ -19,11 +19,28 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+    <style>
+        .span{
+            /*
+                文字阴影：
+                text-shadow: 水平位移 垂直位移  模糊程度  阴影颜色;
+            */
+            font: 100 40px "Comic Sans MS";
+            color: white;
+            text-shadow: 0 0 20px #fdec84,
+            10px -10px 30px #ffae35,
+            20px -20px 40px #ec760c,
+            -20px -60px 50px #cd4607,
+            0px -80px 60px #973717,
+            10px -40px 70px #451b0e;
+        }
+
+    </style>
 </head>
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
   <div class="login-logo">
-    <b>人人权限系统</b>
+    <b class="span">商品系统管理平台</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
