--- a/blg-security/blg-admin/src/main/resources/templates/main.html
+++ b/blg-security/blg-admin/src/main/resources/templates/main.html
@@ -6,32 +6,30 @@
     <title>欢迎页</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap.min.css">
+    <style>
+        .span{
+            /*
+                文字阴影：
+                text-shadow: 水平位移 垂直位移  模糊程度  阴影颜色;
+            */
+            font: 700 100px "Comic Sans MS";
+            color: white;
+            text-shadow: 0 0 20px #fdec84,
+            10px -10px 30px #ffae35,
+            20px -20px 40px #ec760c,
+            -20px -60px 50px #cd4607,
+            0px -80px 60px #973717,
+            10px -40px 70px #451b0e;
+        }
+        .body{
+            text-align: center;
+            background-color: -moz-win-communicationstext;
+        }
+    </style>
 </head>
-<body>
-<div class="panel panel-default">
-    <div class="panel-heading">基本信息</div>
-    <div style="padding: 10px 0 20px 10px;">
-        <h3>&nbsp;&nbsp;&nbsp;项目介绍</h3>
-        <ul>
-            <li>采用Spring、MyBatis、Shiro框架，开发的一套权限系统，极低门槛，拿来即用。</li>
-            <li>设计之初，就非常注重安全性，为企业系统保驾护航，让一切都变得如此简单。</li>
-            <li>提供了代码生成器，只需编写30%左右代码，其余的代码交给系统自动生成，可快速完成开发任务</li>
-            <li>推荐使用阿里云服务器部署项目，免费领取阿里云优惠券，请点击【<a href="https://promotion.aliyun.com/ntms/act/ambassador/sharetouser.html?userCode=y93lfwbg&amp;productCode=dmspre&amp;utm_source=y93lfwbg" target="_blank">免费领取</a>】</li>
-        </ul>
-
-        <h3>&nbsp;&nbsp;&nbsp;获取帮助</h3>
-        <ul>
-            <li>Git地址：<a href="https://gitee.com/blgio/blg-security" target="_blank">https://gitee.com/blgio/blg-security</a></li>
-            <li>官方社区：<a href="http://www.blg.io/?s=index/Community" target="_blank">http://www.blg.io/?s=index/Community</a></li>
-            <li>如需关注项目最新动态，请Watch、Star项目，同时也是对项目最好的支持</li>
-        </ul>
-
-        <h3>&nbsp;&nbsp;&nbsp;官方QQ群</h3>
-        <ul>
-            <li>高级群：324780204(大牛云集，跟大牛学习新技能)</li>
-            <li>普通群：145799952(学习交流，互相解答各种疑问)</li>
-        </ul>
-    </div>
+<body class="body">
+<div class="span" style="margin-top: 300px">
+       欢迎来到商品管理平台
 </div>
 </body>
 </html>
