--- a/blg-security/blg-generator/src/main/resources/template/Controller.java.vm
+++ b/blg-security/blg-generator/src/main/resources/template/Controller.java.vm
@@ -1,21 +1,18 @@
-package ${package}.${moduleName}.controller;
+package ${package}import io.blg.common.validator.ValidatorUtils;
+import org.apache.shiro.authz.annotation.RequiresPermissions;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.Map;
 
-import io.blg.common.validator.ValidatorUtils;
-import org.apache.shiro.authz.annotation.RequiresPermissions;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-
-import ${package}.${moduleName}.entity.${className}Entity;
-import ${package}.${moduleName}.service.${className}Service;
-import ${mainPath}.common.utils.PageUtils;
-import ${mainPath}.common.utils.R;
+.${moduleName}.controller;
+    ${package}
+        .${moduleName}.entity.${className}Entity;
+    ${package}
+        .${moduleName}.service.${className}Service;
+    ${mainPath}
+        .common.utils.PageUtils; ${mainPath}.common.utils.R;
 
 
 
