--- a/blg-security/blg-generator/src/main/resources/template/Dao.java.vm
+++ b/blg-security/blg-generator/src/main/resources/template/Dao.java.vm
@@ -1,7 +1,8 @@
-package ${package}.${moduleName}.dao;
+package ${package}import com.baomidou.mybatisplus.mapper.BaseMapper;
 
-import ${package}.${moduleName}.entity.${className}Entity;
-import com.baomidou.mybatisplus.mapper.BaseMapper;
+.${moduleName}.dao;
+    ${package}
+        .${moduleName}.entity.${className}Entity;
 
 /**
  * ${comments}
