--- a/blg-security/blg-generator/src/main/resources/template/ServiceImpl.java.vm
+++ b/blg-security/blg-generator/src/main/resources/template/ServiceImpl.java.vm
@@ -1,16 +1,19 @@
-package ${package}.${moduleName}.service.impl;
-
-import org.springframework.stereotype.Service;
-import java.util.Map;
-import com.baomidou.mybatisplus.mapper.EntityWrapper;
+package ${package}import com.baomidou.mybatisplus.mapper.EntityWrapper;
 import com.baomidou.mybatisplus.plugins.Page;
 import com.baomidou.mybatisplus.service.impl.ServiceImpl;
-import ${mainPath}.common.utils.PageUtils;
-import ${mainPath}.common.utils.Query;
+import org.springframework.stereotype.Service;
 
-import ${package}.${moduleName}.dao.${className}Dao;
-import ${package}.${moduleName}.entity.${className}Entity;
-import ${package}.${moduleName}.service.${className}Service;
+import java.util.Map;
+
+.${moduleName}.service.impl;
+    ${mainPath}
+        .common.utils.PageUtils;
+    ${mainPath}
+        .common.utils.Query;
+    ${package}
+        .${moduleName}.dao.${className}Dao;
+    ${package}
+        .${moduleName}.entity.${className}Entity; ${package}.${moduleName}.service.${className}Service;
 
 
 @Service("${classname}Service")
