--- a/blg-security/blg-admin/src/main/resources/templates/modules/sys/userAddress.html
+++ b/blg-security/blg-admin/src/main/resources/templates/modules/sys/userAddress.html
@@ -9,7 +9,7 @@
 	<div v-show="showList">
 		<div class="grid-btn">
 			<div class="form-group col-sm-2">
-				<input type="text" class="form-control" v-model="q.username" @keyup.enter="query" placeholder="用户名">
+				<input type="text" class="form-control" v-model="q.userName" @keyup.enter="query" placeholder="用户名">
 			</div>
 			<a class="btn btn-default" @click="query">查询</a>
 			<#if shiro.hasPermission("sys:userAddress:save")>
@@ -32,7 +32,9 @@
 			<div class="form-group">
 				<div class="col-sm-2 control-label">用户名</div>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" v-model="userAddress.userName" placeholder="用户名"/>
+					<!--<input type="text" class="form-control" v-model="userAddress.userName" placeholder="用户名"/>-->
+					<input type="text" class="form-control" style="cursor:pointer;" v-model="userAddress.userName" @click="userIframe" readonly="readonly" placeholder="用户名"/>
+
 				</div>
 			</div>
 			<div class="form-group">
@@ -88,7 +90,7 @@
 
 <!-- 选择用户 -->
 <div id="userLayer" style="display: none;padding:10px;">
-	<ul id="userTree" class="ztree"></ul>
+	<div id="userIframe" class="panel-heading"></div>
 </div>
 
 <script src="${request.contextPath}/statics/js/modules/sys/userAddress.js?_${.now?long}"></script>
