--- a/blg-security/blg_member/src/main/resources/templates/head.html
+++ b/blg-security/blg_member/src/main/resources/templates/head.html
@@ -25,7 +25,7 @@
         </ul>
     </div>
     <div class="header-sign left">
-        <div class="logo left pl25 mt5"><a href="index.html"><img src="${request.contextPath}/statics/images/logo.png"/></a></div>
+        <div class="logo left pl25 mt5"></div>
         <div class="user-sign right pl20">
 
             <div id="guestDiv" style="dispaly:none" class="initial-login clearfix" >
