--- a/blg-security/blg_member/src/main/resources/templates/invoice-style.html
+++ b/blg-security/blg_member/src/main/resources/templates/invoice-style.html
@@ -10,127 +10,179 @@
 	<link href="${request.contextPath}/statics/css/login.css" rel="stylesheet">
 	<script src="${request.contextPath}/statics/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="${request.contextPath}/statics/js/bikun.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $("#top").load("head.html");
+            if('${userAddr}'!=null){
+                var divA = document.getElementById("addrShow");
+                var str = "<dd><p class='clearfix'>${userAddr.receiveName}&nbsp;${userAddr.receiveMobile}</p> <p class='clearfix'><span  class='left wid575'>${userAddr.province}&nbsp;${userAddr.city}&nbsp;${userAddr.county}&nbsp;${userAddr.address}</span></p></dd>";
+                divA.innerHTML=divA.innerHTML+str;
+            }
+        })
+        function closeMask(){
+            $(".mask").hide();
+            $(".modify_r").hide();
+        }
+
+        function toConfirm(){
+            $(".mask").show();
+            $(".modify_r").show();
+        }
+
+        function addAddr(){
+            var receiveName=$("#receiveName").val();
+            var receiveMobile=$("#receiveMobile").val();
+            var address=$("#address").val();
+            var postalCode=$("#postalCode").val();
+            var province=$("#province").val();
+            var city=$("#city").val();
+            var county=$("#county").val();
+            var userId=$("#userId").val();
+            var username=$("#username").val();
+            $.ajax({
+                async : false,
+                cache : false,
+                timeout: 1000,
+                url: 'http://localhost:8081/blg-member/member/addUserAddr',
+                type: "post",
+                data:{"receiveName":receiveName,"receiveMobile":receiveMobile,"address":address,"postalCode":postalCode,"province":province,"city":city,"county":county,"userId":userId,"username":username},
+                success: function(data){
+                    if(data.code == 0){
+                        closeMask();
+                        $.ajax({
+                            async : false,
+                            cache : false,
+                            timeout: 1000,
+                            url: 'http://localhost:8081/blg-member/member/findUserAddr',
+                            type: "post",
+                            data:{"userId":userId},
+                            success: function(data){
+                                var divA = document.getElementById("addrShow");
+                                var str = "<dd><p class='clearfix'>"+data.receiveName+"&nbsp;"+data.receiveMobile+"</p> <p class='clearfix'><span  class='left wid575'>"+data.province+"&nbsp;"+data.city+"&nbsp;"+data.county+"&nbsp;"+data.address+"</span></p></dd>";
+                                divA.innerHTML=divA.innerHTML+str;
+                                $("#userAddr").val(data.id)
+                            }
+                        });
+                    }else{
+                        alert("地址新增失败。。。")
+                    }
+                }
+            });
+        }
+        function choiceDate(){
+            var startDate = $("#startDate").val();
+            var endDate = $("#endDate").val();
+            var oDate1 = new Date(startDate);
+            var oDate2 = new Date(endDate);
+            var myDate = new Date();
+            var prodPrice =$("#prodPrice").val();
+            var deposit =$("#deposit").val();
+            if(startDate == ''){
+                alert("取包时间不能为空");
+                return ;
+            }
+            if(endDate ==''){
+                alert("还包时间不能为空");
+                return ;
+            }
+            if(myDate.getTime() > oDate1.getTime() ){
+                alert("取包时间不能小于当前时间");
+                return false;
+            }
+            if(oDate1.getTime() > oDate2.getTime()){
+               alert("还包时间不能大于取包时间");
+                $("#endDate").val('');
+               return ;
+            }else{
+                dateSpan = oDate2 - oDate1;
+                dateSpan = Math.abs(dateSpan);
+                iDays = Math.floor(dateSpan / (24 * 3600 * 1000));
+                $("#rentPrice").text("￥"+parseFloat(iDays*prodPrice));
+                var totalPrice = Number(iDays*prodPrice)+Number(deposit);
+                $("#totalPrice").text("￥"+totalPrice);
+            }
+        }
+        //生成订单
+        function createOrder() {
+            var startDate = $("#startDate").val();
+            var endDate = $("#endDate").val();
+            var prodId =$("#prodId").val();
+            var userId =$("#userId").val();
+            var oDate1 = new Date(startDate);
+            var oDate2 = new Date(endDate);
+            var addressId = $("#addressId").val();
+            dateSpan = oDate2 - oDate1;
+            dateSpan = Math.abs(dateSpan);
+            dayNum = Math.floor(dateSpan / (24 * 3600 * 1000));
+            $.ajax({
+                async : false,
+                cache : false,
+                timeout: 1000,
+                url: 'http://localhost:8081/blg-member/member/createOrder',
+                type: "post",
+                data:{"userId":userId,"prodId":prodId,"dayNum":dayNum,"startDate":startDate,"endDate":endDate,"addressId":addressId},
+                success: function(data){
+                    if(data.id !=null) {
+                        window.location.href = "http://localhost:8081/blg-member/generated?orderId="+data.id;
+                    }
+                }
+            });
+        }
+    </script>
 </head>
 
 <body>
-	 <!------------------------------ 头部 ------------------------------>
-	 <div class="header clearfix">
-      <div class="header-classify left">
-        <ul>
-          <li><a href="index.html">可循环宝贝</a></li>
-
-
-        </ul>
-      </div>
-      <div class="header-sign left">
-        <div class="logo left pl25 mt5"><a href="index.html"><img src="${request.contextPath}/statics/images/logo.png"/></a></div>
-        <div class="user-sign right pl20">
-          <div class="initial-login clearfix" ><s></s><i></i><a href="login.html" class="login-text ml5">登录</a><a href="register.html" class="register-text  ml10">注册</a></div>
-          <div class="user-login clearfix" style="display:none;">
-            <s></s><i></i><em class="star-mar"><span>5</span></em><em class="more-mar"><span>5</span></em><a href="index.html" class="exit-login left ml5 mr10">退出登录</a><a href="bikun_MyGirIndex.html" class="portrait"><img src="${request.contextPath}/statics/images/small-head.jpg"/></a>
-          </div>
-      </div>
-     </div>
-    </div>
-	<!------------------------------ 头部end ------------------------------>
-
+<input id="userId" name="userId" value="${user.userId}" type="hidden"/>
+<input id="username" name="username" value="${user.username}" type="hidden"/>
+<input id="prodPrice" name="prodPrice" value="${prod.prodPrice}" type="hidden"/>
+<input id="deposit" name="deposit" value="${prod.deposit}" type="hidden"/>
+<input id="prodId" name="prodId" value="${prod.id}" type="hidden"/>
+<input id="addressId" name="addressId" value="${userAddr.id}" type="hidden"/>
+<div class="header clearfix" id="top"></div>
 	<!------------------------------ 我的订单 ------------------------------>
 
 	<div class="submit-order">
 		<h2>我的订单</h2>
-    <div class="write-info"><span>填写并核对订单信息</span><a href="submit-order.html">修改新地址</a></div>
+    <div class="write-info"><span>填写并核对订单信息</span><a href="javaScript:toConfirm()">新增地址</a></div>
     <div class="receipt-info pt5s receive">
-        <h3>收货人信息<span>[编辑]</span></h3>
-          <dl class="clearfix">
+        <h3>收货人信息</h3>
+          <dl class="clearfix" id="addrShow">
 
-              <dd><p class="clearfix">张小健 1531320468  84766233@qq.com</p>
-                  <p class="clearfix">
-                     <span  class="left wid575">北京 东城区 内环到三环里 东城区景山东街三眼井胡同49号</span></p></dd>
-              <dt><div class="new-address"><s>+</s>使用新地址</div></dt> 
           </dl>
-      </div>
-     <div class="invoice-info mt10">
-        <h3>发票信息：类型和抬头</h3>
-        <div class="invoice-contect">
-           <p class="mt10 invoice-company"><input type="radio" checked/>北京数码科技有限公司 编辑 删除</p>
-           <p class="invoice-style mt5"><span class="wid145-div">使用新的发票信息<b></b></span>发票开据方式：&nbsp;&nbsp;<input type="radio" checked/>普通发票( 纸质 ) <span class="ml54">发票抬头</span> &nbsp;&nbsp;<input type="radio"/>个人 <input type="radio" checked class="ml15"/>单位：<input type="text" class="wid153-input" value="请输入单位名称"/></p>
-           <p class="invoice-style mt5"><span class="wid145-span">发票内容<b></b></span><input type="radio" checked/>明细  &nbsp;&nbsp;<input type="radio" class="ml35"/>碧坤包包 <input type="radio" class="ml20"/>碧坤包包<input type="radio" class="ml20"/>碧坤包包</p>
-           <p class="remark">备注：如商品由第三家卖方销售，发票内容由其卖家决定，发票由卖家开据发票。<a href="my-orders.html">保存发票信息</a></p>
-        </div>  
       </div>
     <h3>商品清单</h3>
 		<div class=" apply-info relet-info mt20">
 			<table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <th class="good"><input type="checkbox"/>&nbsp;&nbsp;全选 <em class="ml20">商品</em> </th>
+                <th class="good"><em class="ml20">商品</em> </th>
                 <th>价格(元/天)</th>
                 <th>日期</th>
                 <th>数量</th> 
                 <th>押金</th>               
-                <th>小计信息</th>
               </tr>
               <tr>
                 <td>
                   <dl class="clearfix">
-                    <dt><input type="checkbox" class="checkbox left" /><img src="${request.contextPath}/statics/images/bag-img4.jpg"></dt>
-                    <dd>MADISON麦迪逊压花皮革PINNACLE CARRIE手提包<span>商品编号：1030849</span></dd>
+                    <dt><img src="${prod.imagePath}"></dt>
+                    <dd>${prod.prodName}<br/><span>商品编号：${prod.prodCode}</span></dd>
                   </dl>
                 </td>
-                <td><span class="price">￥177</span><br/><s class="ft14">￥556</s></td>
+                <td><span class="price">￥${prod.prodPrice}</span><br/></td>
                 <td>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
+                  <p><em class="left">取包时间</em><input type="date" value="" id="startDate" onchange="choiceDate()" /><s></s></p>
+                  <p><em class="left">还包时间</em><input type="date" value="" id="endDate" onchange="choiceDate()"/><s></s></p>
                 </td>
                 <td><a href="" class="clearfix ml35"><u></u><i>1</i><s></s></a></td> 
-                <td><span>￥50000</span></td>
-                <td><span class="has-background">￥1239</span></td>                          
-              </tr>
-              
-              <tr>
-                <td>
-                  <dl class="clearfix">
-                    <dt><input type="checkbox" class="checkbox left" /><img src="${request.contextPath}/statics/images/bag-img4.jpg"></dt>
-                    <dd>MADISON麦迪逊压花皮革PINNACLE CARRIE手提包<span>商品编号：1030849</span></dd>
-                  </dl>
-                </td>
-                <td><span class="price">￥177</span><br/><s class="ft14">￥556</s></td>
-                <td>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                </td>
-                <td><a href="" class="clearfix ml35"><u></u><i>1</i><s></s></a></td> 
-                <td><span>￥50</span><span class="right">八层新</span></td>
-                <td><span class="has-background">￥1239</span></td>                          
-              </tr>
-
-              <tr>
-                <td>
-                  <dl class="clearfix">
-                    <dt><input type="checkbox" class="checkbox left" /><img src="${request.contextPath}/statics/images/bag-img4.jpg"></dt>
-                    <dd>MADISON麦迪逊压花皮革PINNACLE CARRIE手提包<span>商品编号：1030849</span></dd>
-                  </dl>
-                </td>
-                <td><span class="price">￥177</span><br/><s class="ft14">￥556</s></td>
-                <td>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                </td>
-                <td><a href="" class="clearfix ml35"><u></u><i>1</i><s></s></a></td> 
-                <td><span>￥50</span></td>
-                <td><span class="has-background">￥1239</span></td>                          
+                <td><span>￥${prod.deposit}</span></td>
               </tr>
 
           </table>
 		</div>
-    <div class="mt20"><a href="" class="del-choose">删除勾选</a></div>
-    <p class="mt23"><a href="index.html" class="stroll left">&lt;&lt;再去逛逛</a><span>1</span> 件商品 总商品金额：<b>￥332.00</b></p>
-		<p>租金：<b>￥166.00</b></p>
-    <p>押金：<b>￥166.00</b></p>
-    <p>运费：<b>-￥0.00</b></p>
-    <p class="total-money"><em class="ft18">总金额（已免运费）：</em><b class="ft28 mr22">￥322</b><a href="order-generated.html" class="now-pay right">提交订单</a></p>  
+    <div class="mt20"></div>
+    <p class="mt23"><a href="index.html" class="stroll left">&lt;&lt;再去逛逛</a><span>1</span> 件商品</p>
+		<p>租金：<b id="rentPrice"></b></p>
+    <p>押金：<b>￥${prod.deposit}</b></p>
+    <p class="total-money"><em class="ft18">总金额（已免运费）：</em><b class="ft28 mr22" id="totalPrice"></b><a href="javaScript:createOrder()" class="now-pay right">提交订单</a></p>
 	</div>
 
 	<!------------------------------ 我的订单end ------------------------------>
@@ -158,5 +210,30 @@
 			</ul>
 		</div>
 	</div>
+<div class="mask" style="display:none"></div>
+<div class="modify_contO modify_contSix" style="position:fixed; z-index:99999; left:33%; top:30%">
+    <div class="modify_r" style="display:none">
+        <p>
+            <font><em class="redStart"></em>收货人：</font>
+            <input id="receiveName" name="receiveName" type="text" class="myGirT_w200" value=""><span>请输入真实的收货人姓名</span>
+        </p>
+        <p>
+            <font><em class="redStart"></em>所在地区：</font>
+            <select  class="area_select" id="province" name="province"><option value="北京">北京</option></select> <select name="city" id="city" data-key="city" class="area_select" data-available="true"><option value="北京市">北京市</option></select><select  class="area_select" name="county" id="county" data-key="area" data-available="true"><option value="东城区">东城区</option></select>
+        </p>
+        <p><font><em class="redStart"></em>详细地址：</font>
+            <input id="address" name="address" type="text" class="myGirT_w400" value=""/>
+        </p>
+        <p><font>邮政编码：</font>
+            <input id="postalCode" name="postalCode" type="text" class="myGirT_w200" value=""/>
+        </p>
+        <p>
+            <font><em class="redStart"></em>手机号码：</font>
+            <input id="receiveMobile" name="receiveMobile" type="text" class="myGirT_w200" value="" />
+        </p>
+        <p ><font></font><input id="isDefault" name="isDefault" type="checkbox" class="checkbox1" >设为默认</p>
+        <div class="modify_btns mt30 clearfix"><input type="button" class="myGirBtn_w170" onclick="addAddr()" value="确认"><input onclick="closeMask()" type="button" class="myGirBtn_w170 ml30" value="取消"></div>
+    </div>
+</div>
 </body>
 </html>
