--- a/blg-security/blg_member/src/main/resources/templates/product-lists.html
+++ b/blg-security/blg_member/src/main/resources/templates/product-lists.html
@@ -9,7 +9,6 @@
 	<link href="${request.contextPath}/statics/css/common.css" rel="stylesheet">
 	<link href="${request.contextPath}/statics/css/style.css" rel="stylesheet">
 	<script src="${request.contextPath}/statics/js/jquery-1.8.3.min.js"></script>
-	<!--<script type="text/javascript" src="${request.contextPath}/statics/js/bikun.js"></script>-->
     <script type="text/javascript" src="${request.contextPath}/statics/js/mzp-packed.js"></script>
     <script>
   $(function(){
@@ -26,34 +25,27 @@
 		     $('.drop-down').hide()
 		   }
 		})
-		
+      $("#top").load("head.html");
+
   })
+        function rent(id) {
+            $.post('http://localhost:8081/blg-member/member/fetchUserHead',{
+                type:"1"
+            },function(data){
+                if(data.username==null){
+                   alert("请先登陆......");
+                    window.location.href="http://localhost:8081/blg-member/login.html";
+                }else{
+                    window.location.href="http://localhost:8081/blg-member/rent?prodId="+id;
+                }
+            });
+        }
 </script>
 
 </head>
 
 <body>
-	 <!------------------------------ 头部 ------------------------------>
-	 <div class="header clearfix">
-	      <div class="header-classify left">
-	        <ul>
-	          <li><a href="index.html">可循环宝贝</a></li>
-
-
-	        </ul>
-	      </div>
-	      <div class="header-sign left">
-	        <div class="logo left pl25 mt5"><a href="index.html"><img src="${request.contextPath}/statics/images/logo.png"/></a></div>
-	        <div class="user-sign right pl20">
-	          <div class="initial-login clearfix" ><s></s><i></i><a href="login.html" class="login-text ml5">登录</a><a href="register.html" class="register-text  ml10">注册</a></div>
-	          <div class="user-login clearfix" style="display:none;">
-	            <s></s><i></i><em class="star-mar"><span>5</span></em><em class="more-mar"><span>5</span></em><a href="index.html" class="exit-login left ml5 mr10">退出登录</a><a href="bikun_MyGirIndex.html" class="portrait"><img src="${request.contextPath}/statics/images/small-head.jpg"/></a>
-	          </div>
-	      	</div>
-	     </div>
-    </div>
-	<!------------------------------ 头部end ------------------------------>
-
+<div class="header clearfix" id="top"></div>
 	<!------------------------------ 产品详情 ------------------------------>
 
 	 <div class="title wid1000 mt40"><a href="">商品租赁平台</a> &gt; <a href="">产品系列</a> &gt; 女包</div>
@@ -62,46 +54,33 @@
        <div class="product-l">
 	    <div class="left-pro">
 		<div class="t1">
-			
 			<div id="showArea">
-				<a href="${request.contextPath}/statics/images/big-img.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/big-img.jpg"><img src="${request.contextPath}/statics/images/small-img.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img02.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img02.jpg"><img src="${request.contextPath}/statics/images/img02s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img03.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img03.jpg"><img src="${request.contextPath}/statics/images/img03s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img01.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img01.jpg"><img src="${request.contextPath}/statics/images/img01s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img02.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img02.jpg"><img src="${request.contextPath}/statics/images/img02s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img03.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img03.jpg"><img src="${request.contextPath}/statics/images/img03s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img01.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img01.jpg"><img src="${request.contextPath}/statics/images/img01s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img02.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img02.jpg"><img src="${request.contextPath}/statics/images/img02s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img03.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img03.jpg"><img src="${request.contextPath}/statics/images/img03s.jpg" /></a>
-				<a href="${request.contextPath}/statics/images/img01.jpg" rel="zoom1" rev="${request.contextPath}/statics/images/img01.jpg"><img src="${request.contextPath}/statics/images/img01s.jpg" /></a>
+				<a href="${prod.imagePath}" rel="zoom1" rev="${request.contextPath}/statics/images/big-img.jpg"><img src="${prod.imagePath}" /></a>
 			</div>
-			
 		</div>
 		<div class="t2">
-		<a href="${request.contextPath}/statics/images/big-img.jpg" id="zoom1" class="MagicZoom MagicThumb"><img src="${request.contextPath}/statics/images/big-img.jpg" id="main_img" class="main_img" style="width:508px; height:582px;" /></a>
+		<a href="${prod.imagePath}" id="zoom1" class="MagicZoom MagicThumb"><img src="${prod.imagePath}" id="main_img" class="main_img" style="width:508px; height:582px;" /></a>
 		</div>
 	    </div>
        
        </div>
        <div class="product-r">
-         <h2>布里克经典标志印花布<br>SULLIVAN半月包 </h2>
-         <div class="shop-style"><span class="ft14">商品类别：</span><a href="">手提包</a><a href="">斜挎包</a></div>
+         <h2>${prod.prodName}</h2>
+         <div class="shop-style"><span class="ft14">商品类别：</span><a href="">${prod.prodSpec}</a></div>
          <ul class="product-con">
-           <li class="bt40 bt"><span class="right mt5">押金：20000 RMB</span><span class="ft24">300</span><span class="ft14 pt5">RMB/天</span></li>
+           <li class="bt40 bt"><span class="right mt5">押金：${prod.deposit} RMB</span><span class="ft24">${prod.prodPrice}</span><span class="ft14 pt5">RMB/天</span></li>
            <li class="ft14 mb10"><div class="bt"><span class="specifics">-</span>查看细节</div>
                <ul class="drop-down clearfix pt15" style="display: block">
-                   <li>商品编号：1135710</li>
-                   <li>品牌：蔻驰（COACH）</li>
-                   <li>上架时间：2014-06-03 15：16：16</li>
-                   <li>商品毛重：1.048kg</li>
-                   <li>商品产地：中国大陆</li>
-                   <li>成色:全新</li>
+                   <li>商品编号：${prod.prodCode}</li>
+                   <li>品牌：${prod.prodBrand}</li>
+                   <li>生产日期：${prod.produceDateStr}</li>
+                   <li>商品产地：${prod.prodPlace}</li>
+                   <li>成色:${prod.prodCondition}</li>
                </ul>
              </li>  
          </ul>
          <div class="goods-num"><span class="ft14 red ml10 left">有货</span><span class="ml20 left">数量</span><span class="left ml20"><i class="left"></i><input class="left" value="1" type="text"><s class="left"></s></span></div>
-         <div class="easy-rent"><a href="invoice-style.html" class="easy-one left">轻松租</a><a href="apply-order.html" class="reserve left">预约</a></div>
-         <div class="join-cart"><a href="my-cart.html" class="easy-one left">加入购物车</a><a href="" class="reserve left"><i></i>分享(65)</a></div>
+         <div class="easy-rent"><a href="javascript:rent(${prod.id});" class="easy-one left">轻松租</a></div>
        </div>
      
      </div>
@@ -124,7 +103,7 @@
                   <dd>
                     <h4><a href="" class="green">毛毛草</a>　35分钟前：</h4>
                     <p>这个视角挺好的，就是有点敏感。包包如楼上所说，没有看全哦。哈哈！赞个～</p>
-                    <p class="pro-data">2014-08-09</p>
+                    <p class="pro-data">2019-02-14</p>
                   </dd>
                 </dl>
                 <dl class="clearfix">
@@ -132,7 +111,7 @@
                   <dd>
                     <h4><a href="" class="green">毛毛草</a>　35分钟前：</h4>
                     <p>这个视角挺好的，就是有点敏感。包包如楼上所说，没有看全哦。哈哈！赞个～</p>
-                    <p class="pro-data">2014-08-09</p>
+                    <p class="pro-data">2019-02-14</p>
                   </dd>
                 </dl>
                 <dl class="clearfix">
@@ -140,7 +119,7 @@
                   <dd>
                     <h4><a href="" class="green">毛毛草</a>　35分钟前：</h4>
                     <p>这个视角挺好的，就是有点敏感。包包如楼上所说，没有看全哦。哈哈！赞个～</p>
-                    <p class="pro-data">2014-08-09</p>
+                    <p class="pro-data">2019-02-14</p>
                   </dd>
                 </dl>
 
@@ -154,7 +133,7 @@
                   <dd>
                     <h4><a href="" class="green">包包草</a>　55分钟前：</h4>
                     <p>这个视角点敏感。包包如楼上所说，没有看全哦。哈哈！赞个～</p>
-                    <p class="pro-data">2014-08-09</p>
+                    <p class="pro-data">2019-02-14</p>
                   </dd>
                 </dl>
                 <dl class="clearfix">
@@ -162,7 +141,7 @@
                   <dd>
                     <h4><a href="" class="green">包包草</a>　16分钟前：</h4>
                     <p>这个视角挺好的，就是有点敏感。包包如楼上所说，没有看全哦。哈哈！赞个～</p>
-                    <p class="pro-data">2014-08-09</p>
+                    <p class="pro-data">2019-08-09</p>
                   </dd>
                 </dl>
                 <dl class="clearfix">
@@ -170,7 +149,7 @@
                   <dd>
                     <h4><a href="" class="green">包包草</a>　35分钟前：</h4>
                     <p>这个视角挺好的，就是有点敏所说，没有看全哦。哈哈！赞个～</p>
-                    <p class="pro-data">2014-08-09</p>
+                    <p class="pro-data">2019-08-09</p>
                   </dd>
                 </dl>
 
@@ -214,31 +193,6 @@
         </div>
      </div>
 	<!------------------------------ 产品详情end ------------------------------>
-
-	 <!------------------------------ 尾部 ------------------------------>
-    <div class="fotbx pb70 clearfix pt30">
-            <ul>
-                <li><a href="">bequeen客服</a><span>|</span></li>
-                <li><a href="">服务保障</a><span>|</span></li>
-                <li><a href="">租赁指南</a><span>|</span></li>
-                <li><a href="">支付方式</a><span>|</span></li>
-                <li><a href="">配送方式</a><span>|</span></li>
-                <li><a href="">关于索赔</a><span>|</span></li>
-                <li><a href="">广告服务</a><span>|</span></li>
-                <li><a href="">友情链接</a><span>|</span></li>                 	
-                <li><a href="">手机bequeen</a></li>
-              </ul> 
-    </div>
-	<div class="footer">
-		<span>COPYRIGHT © 1998 – 2014 BIKUN. ALL RIGHTS RESERVED.</span>
-		<ul>
-			<li><a href="">服务条款</a></li>
-			<li><a href="">法律条款</a></li>
-			<li><a href="">隐私条款</a></li>
-		</ul>
-	</div>
-	<!------------------------------ 尾部end ------------------------------>
-
 	<!--固定浮动窗帘-->
 	<div class="fixed_float">
 		<div class="float_leftBox">
