--- a/blg-security/blg_member/src/main/resources/templates/submit-order.html
+++ b/blg-security/blg_member/src/main/resources/templates/submit-order.html
@@ -10,30 +10,24 @@
 	<link href="${request.contextPath}/statics/css/login.css" rel="stylesheet">
 	<script src="${request.contextPath}/statics/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="${request.contextPath}/statics/js/bikun.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $("#top").load("head.html");
+        })
+        function closeMask(){
+            $(".mask").hide();
+            $(".modify_r").hide();
+        }
+
+        function toConfirm(){
+            $(".mask").show();
+            $(".modify_r").show();
+        }
+    </script>
 </head>
 
 <body>
-	 <!------------------------------ 头部 ------------------------------>
-   <div class="header clearfix">
-      <div class="header-classify left">
-        <ul>
-          <li><a href="index.html">可循环宝贝</a></li>
-
-
-        </ul>
-      </div>
-      <div class="header-sign left">
-        <div class="logo left pl25 mt5"><a href="index.html"><img src="${request.contextPath}/statics/images/logo.png"/></a></div>
-        <div class="user-sign right pl20">
-          <div class="initial-login clearfix" ><s></s><i></i><a href="login.html" class="login-text ml5">登录</a><a href="register.html" class="register-text  ml10">注册</a></div>
-          <div class="user-login clearfix" style="display:none;">
-            <s></s><i></i><em class="star-mar"><span>5</span></em><em class="more-mar"><span>5</span></em><a href="index.html" class="exit-login left ml5 mr10">退出登录</a><a href="bikun_MyGirIndex.html" class="portrait"><img src="${request.contextPath}/statics/images/small-head.jpg"/></a>
-          </div>
-      </div>
-     </div>
-    </div>
-	<!------------------------------ 头部end ------------------------------>
-
+<div class="header clearfix" id="top"></div>
 	<!------------------------------ 我的订单 ------------------------------>
 
 	<div class="submit-order">
@@ -43,55 +37,15 @@
         <h3>收货人信息</h3>
         <div class="consignee-address"><input type="checkbox" class="ml10 mr5"/>孙晨晨 北京市朝阳区三环到四环之间北辰西路80号 18990612250</div>
         <div class="consignee-address con-address"><input type="checkbox" class="ml10 mr5"/>那爽爽 北京市朝阳区三环以内北京北京市朝阳区东三环团结湖里甲13号 15166308199 <a href="submit-order.html">编辑</a><a href="#">删除</a></div>
-        <div class="expend-con clearfix">
-              <h3>修改当前地址</h3>
-              <dl>
-              <dt class="pt33">选择所在地：</dt>
-              <dd class="pt33"><select  class="area_select"><option value="">北京</option><option value="110000">北京</option><option value="120000">天津</option><option value="130000">河北省</option><option value="140000">山西省</option><option value="150000">内蒙古自治区</option><option value="210000">辽宁省</option><option value="220000">吉林省</option><option value="230000">黑龙江省</option><option value="310000">上海</option><option value="320000">江苏省</option><option value="330000">浙江省</option><option value="340000">安徽省</option><option value="350000">福建省</option><option value="360000">江西省</option><option value="370000">山东省</option><option value="410000">河南省</option><option value="420000">湖北省</option><option value="430000">湖南省</option><option value="440000">广东省</option><option value="450000">广西壮族自治区</option><option value="460000">海南省</option><option value="500000">重庆</option><option value="510000">四川省</option><option value="520000">贵州省</option><option value="530000">云南省</option><option value="540000">西藏自治区</option><option value="610000">陕西省</option><option value="620000">甘肃省</option><option value="630000">青海省</option><option value="640000">宁夏回族自治区</option><option value="650000">新疆维吾尔自治区</option><option value="710000">台湾</option><option value="810000">香港特别行政区</option><option value="820000">澳门特别行政区</option><option value="990000">海外</option></select> <select name="city" id="J_City" data-key="city" class="area_select" data-available="true"><option value="">北京市</option></select><select  class="area_select" name="area" id="J_Area" data-key="area" data-available="true"><option value="">东城区</option></select><select name="town"  class="area_select" id="J_Town" data-key="town" data-available="true"><option value="">请选择...</option></select></dd>
-            </dl>
-            <dl class="clearfix">
-              <dt class="mt5">邮政编码：</dt>
-              <dd><input type="text" class="wid121-input mt5 " value="100011"></dd>
-            </dl>
-            <dl class="clearfix has-line">
-              <dt>街道地址：</dt>
-              <dd><textarea class="wid570-input">内到三环里 东城区景山东街三眼井胡同49号</textarea></dd>
-            </dl>
-            <div class="expend-line clearfix"></div>
-            <dl class="clearfix">
-              <dt>收货人姓名：</dt>
-              <dd><input type="text" class="wid125-input" value="张小健"></dd>
-            </dl>
-            <dl class="clearfix">
-              <dt>电话：</dt>
-              <dd><input type="text" class="wid35-input"> - <input type="text" class="wid56-input"> - <input type="text" class="wid35-input">&nbsp;&nbsp;<span>手机和电话请至少填写一个，电话的格式：区号-电话号码-分机</span></dd>
-            </dl>
-            <dl class="clearfix">
-              <dt>手机号：</dt>
-              <dd><input type="text" class="wid125-input"></dd>
-            </dl>
-            <dl class="clearfix pt5 save-address">
-              <dt><a href="">保存地址</a></dt>
-              <dd>取消</dd>
-            </dl>
+        <div class="expend-con clearfix" onclick="toConfirm()">
+              <h3>新增地址</h3>
           </div>
     </div>
-     <div class="receipt-info">
-        <h3>发票信息<span>[编辑]</span></h3>
-          <dl class="clearfix">
-
-              <dd><p class="clearfix">普通发票&nbsp;(电子) &nbsp;&nbsp;个人&nbsp;&nbsp; 明细</p>
-                  <p class="clearfix">
-                     <span class="left">温馨提示：</span>
-                     <span  class="left wid575">发票的开票金额不包括毕坤卡、优惠劵部分<br>电子发票是税务局认可的有效收付款凭证，具有售后维护的法律效力，暂不支持企业报销</span></p></dd>
-              <dt><div class="new-address"><s>+</s>使用新地址</div></dt> 
-          </dl>
-      </div>
     <h3>商品清单</h3>
 		<div class=" apply-info relet-info mt20">
 			<table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <th class="good"><input type="checkbox"/>&nbsp;&nbsp;全选 <em class="ml20">商品</em> </th>
+                <th class="good"><em class="ml20">商品</em> </th>
                 <th>价格(元/天)</th>
                 <th>日期</th>
                 <th>数量</th> 
@@ -101,57 +55,19 @@
               <tr>
                 <td>
                   <dl class="clearfix">
-                    <dt><input type="checkbox" class="checkbox left" /><img src="${request.contextPath}/statics/images/bag-img4.jpg"></dt>
-                    <dd>MADISON麦迪逊压花皮革PINNACLE CARRIE手提包<span>商品编号：1030849</span></dd>
+                    <dt><img src="${prod.imagePath}"></dt>
+                    <dd>${prod.prodName}<span>商品编号：${prod.prodCode}</span></dd>
                   </dl>
                 </td>
-                <td><span class="price">￥177</span><br/><s class="ft14">￥556</s></td>
+                <td><span class="price">￥${prod.prodPrice}</span><br/></td>
                 <td>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
                   <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
                   <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
                 </td>
                 <td><a href="" class="clearfix ml35"><u></u><i>1</i><s></s></a></td> 
-                <td><span>￥50000</span></td>
+                <td><span>￥${prod.deposit}</span></td>
                 <td><span class="has-background">￥1239</span></td>                          
               </tr>
-              
-              <tr>
-                <td>
-                  <dl class="clearfix">
-                    <dt><input type="checkbox" class="checkbox left" /><img src="${request.contextPath}/statics/images/bag-img4.jpg"></dt>
-                    <dd>MADISON麦迪逊压花皮革PINNACLE CARRIE手提包<span>商品编号：1030849</span></dd>
-                  </dl>
-                </td>
-                <td><span class="price">￥177</span><br/><s class="ft14">￥556</s></td>
-                <td>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                </td>
-                <td><a href="" class="clearfix ml35"><u></u><i>1</i><s></s></a></td> 
-                <td><span>￥50</span><span class="right">八层新</span></td>
-                <td><span class="has-background">￥1239</span></td>                          
-              </tr>
-
-              <tr>
-                <td>
-                  <dl class="clearfix">
-                    <dt><input type="checkbox" class="checkbox left" /><img src="${request.contextPath}/statics/images/bag-img4.jpg"></dt>
-                    <dd>MADISON麦迪逊压花皮革PINNACLE CARRIE手提包<span>商品编号：1030849</span></dd>
-                  </dl>
-                </td>
-                <td><span class="price">￥177</span><br/><s class="ft14">￥556</s></td>
-                <td>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                  <p><em class="left">取包时间</em><input type="text" value="2014-3-2"/><s></s></p>
-                </td>
-                <td><a href="" class="clearfix ml35"><u></u><i>1</i><s></s></a></td> 
-                <td><span>￥50</span></td>
-                <td><span class="has-background">￥1239</span></td>                          
-              </tr>
-
           </table>
 		</div>
     <div class="mt20"><a href="" class="del-choose">删除勾选</a></div>
@@ -162,30 +78,6 @@
 	</div>
 
 	<!------------------------------ 我的订单end ------------------------------>
-
-	 <!------------------------------ 尾部 ------------------------------>
-    <div class="fotbx pb70 clearfix pt30">
-            <ul>
-                <li><a href="">bequeen客服</a><span>|</span></li>
-                <li><a href="">服务保障</a><span>|</span></li>
-                <li><a href="">租赁指南</a><span>|</span></li>
-                <li><a href="">支付方式</a><span>|</span></li>
-                <li><a href="">配送方式</a><span>|</span></li>
-                <li><a href="">关于索赔</a><span>|</span></li>
-                <li><a href="">广告服务</a><span>|</span></li>
-                <li><a href="">友情链接</a><span>|</span></li>                 	
-                <li><a href="">手机bequeen</a></li>
-              </ul> 
-    </div>
-	<div class="footer">
-		<span>COPYRIGHT © 1998 – 2014 BIKUN. ALL RIGHTS RESERVED.</span>
-		<ul>
-			<li><a href="">服务条款</a></li>
-			<li><a href="">法律条款</a></li>
-			<li><a href="">隐私条款</a></li>
-		</ul>
-	</div>
-	<!------------------------------ 尾部end ------------------------------>
 
 	<!--固定浮动窗帘-->
 	<div class="fixed_float">
@@ -208,5 +100,30 @@
 			</ul>
 		</div>
 	</div>
+<div class="mask" style="display:none"></div>
+<div class="modify_contO modify_contSix" style="position:fixed; z-index:99999; left:33%; top:30%">
+    <div class="modify_r" style="display:none">
+        <p>
+            <font><em class="redStart"></em>收货人：</font>
+            <input id="receName" name="receName" type="text" class="myGirT_w200" value=""><span>请输入真实的收货人姓名</span>
+        </p>
+        <p>
+            <font><em class="redStart"></em>所在地区：</font>
+            <select  class="area_select"><option value="">北京</option><option value="110000">北京</option><option value="120000">天津</option><option value="130000">河北省</option><option value="140000">山西省</option><option value="150000">内蒙古自治区</option><option value="210000">辽宁省</option><option value="220000">吉林省</option><option value="230000">黑龙江省</option><option value="310000">上海</option><option value="320000">江苏省</option><option value="330000">浙江省</option><option value="340000">安徽省</option><option value="350000">福建省</option><option value="360000">江西省</option><option value="370000">山东省</option><option value="410000">河南省</option><option value="420000">湖北省</option><option value="430000">湖南省</option><option value="440000">广东省</option><option value="450000">广西壮族自治区</option><option value="460000">海南省</option><option value="500000">重庆</option><option value="510000">四川省</option><option value="520000">贵州省</option><option value="530000">云南省</option><option value="540000">西藏自治区</option><option value="610000">陕西省</option><option value="620000">甘肃省</option><option value="630000">青海省</option><option value="640000">宁夏回族自治区</option><option value="650000">新疆维吾尔自治区</option><option value="710000">台湾</option><option value="810000">香港特别行政区</option><option value="820000">澳门特别行政区</option><option value="990000">海外</option></select> <select name="city" id="J_City" data-key="city" class="area_select" data-available="true"><option value="">北京市</option></select><select  class="area_select" name="area" id="J_Area" data-key="area" data-available="true"><option value="">东城区</option></select><select name="town"  class="area_select" id="J_Town" data-key="town" data-available="true"><option value="">请选择...</option></select>
+        </p>
+        <p><font><em class="redStart"></em>详细地址：</font>
+            <input id="street" name="street" type="text" class="myGirT_w400" value=""/>
+        </p>
+        <p><font>邮政编码：</font>
+            <input id="zip" name="zip" type="text" class="myGirT_w200" value=""/>
+        </p>
+        <p>
+            <font><em class="redStart"></em>手机号码：</font>
+            <input id="mobilePhone" name="mobilePhone" type="text" class="myGirT_w200" value="" />
+        </p>
+        <p ><font></font><input id="isDefault" name="isDefault" type="checkbox" class="checkbox1" >设为默认</p>
+        <div class="modify_btns mt30 clearfix"><input type="button" class="myGirBtn_w170" onclick="addAddr()" value="确认"><input onclick="closeMask()" type="button" class="myGirBtn_w170 ml30" value="取消"></div>
+    </div>
+</div>
 </body>
 </html>
