--- a/blg-security/blg_member/src/main/resources/templates/login.html
+++ b/blg-security/blg_member/src/main/resources/templates/login.html
@@ -69,7 +69,7 @@
                     <dt><s></s></dt>
                     <dd><div class="lg-input"><input type="password" value="" id="password"  name="password" class="login-input left"></div></dd>
                   </dl>
-                  <p class="ml82"><span class="right new-user"><a href="register.html">注册新用户</a></span><input type="checkbox" class="checkbox"/><a href="phone-findpassword.html" class="forget-password">忘记密码？</a></p>
+                  <p class="ml82"><span class="right new-user"><a href="register.html">注册新用户</a></span><input type="checkbox" class="checkbox"/><a href="phone-findpassword.html" class="forget-password"></a></p>
 				   <p><a href="javascript:void(0)" onclick="loginMall()" class="login-btn ml15" >登 录</a></p>
                </div>
            </form>
