--- a/blg-security/blg_member/src/main/resources/templates/order-detail.html
+++ b/blg-security/blg_member/src/main/resources/templates/order-detail.html
@@ -54,7 +54,7 @@
 	<!------------------------------ 订单详情 ------------------------------>
 	<div class="submit-order form-detail">
     <div class="bekun-order ft14"><a href="bikun_MyGirIndex.html">我的</a>&nbsp;&gt;&nbsp;<a href="#">订单中心</a>&nbsp;&gt;&nbsp;订单号：${order.orderNo}</div>
-      <div class="details-title mt30"><a href="" class="order-print mr5 right">订单打印</a>订单号：${order.orderNo}</div>
+      <div class="details-title mt30">订单号：${order.orderNo}</div>
     <h2 class="mt30 order-track">订单跟踪</h2>
     <table width="100%" border="0" class="detail-tab mt10" cellspacing="0" cellpadding="0">
 <tr>
