--- a/blg-security/blg_member/src/main/resources/templates/register.html
+++ b/blg-security/blg_member/src/main/resources/templates/register.html
@@ -120,7 +120,7 @@ function validateInput(){
 	}
 }
 function saveMember(){
-    alert("1");
+    alert("注册成功");
 	if (check==1){
         var username=$("#username").val();
         var mobile=$("#mobile").val();
