--- a/blg-security/blg-admin/src/main/resources/templates/login.html
+++ b/blg-security/blg-admin/src/main/resources/templates/login.html
@@ -56,16 +56,6 @@
         <input type="password" class="form-control" v-model="password" placeholder="密码">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" v-model="captcha" @keyup.enter="login" placeholder="验证码">
-        <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <img alt="如果看不清楚，请单击图片刷新！" class="pointer" :src="src" @click="refreshCode">
-        &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>
-      </div>
-      
-      
       <div class="row">
         <div class="col-xs-8">
           <div class="checkbox icheck">
@@ -106,11 +96,8 @@ var vm = new Vue({
 		}
 	},
 	methods: {
-		refreshCode: function(){
-			this.src = "captcha.jpg?t=" + $.now();
-		},
 		login: function (event) {
-			var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
+			var data = "username="+vm.username+"&password="+vm.password;
 			$.ajax({
 				type: "POST",
 			    url: "sys/login",
@@ -122,8 +109,6 @@ var vm = new Vue({
 					}else{
 						vm.error = true;
 						vm.errorMsg = result.msg;
-						
-						vm.refreshCode();
 					}
 				}
 			});
