--- a/blg-security/blg-admin/src/main/resources/templates/modules/order/orderReport.html
+++ b/blg-security/blg-admin/src/main/resources/templates/modules/order/orderReport.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>订单列表</title>
+    <title>订单报表列表</title>
     <#include "/header.html">
 </head>
 <body>
@@ -9,7 +9,10 @@
     <div v-show="showList">
         <div class="grid-btn">
             <div class="form-group col-sm-2">
-                <input type="text" class="form-control" v-model="q.orderNo" @keyup.enter="query" placeholder="订单编码">
+                <input type="date" class="form-control" v-model="q.orderNo" @keyup.enter="query" placeholder="开始日期">
+            </div>
+            <div class="form-group col-sm-2">
+                <input type="date" class="form-control" v-model="q.orderNo" @keyup.enter="query" placeholder="结束日期">
             </div>
             <a class="btn btn-default" @click="query">查询</a>
         <#if shiro.hasPermission("blg:prod:update")>
@@ -24,9 +27,9 @@
     <div class="panel-heading">{{title}}</div>
     <form class="form-horizontal">
         <div class="form-group">
-            <div class="col-sm-2 control-label">订单编码</div>
+            <div class="col-sm-2 control-label">订单量</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="order.orderNo" placeholder="订单编码"/>
+                <input type="text" class="form-control" v-model="order.id" placeholder="订单量"/>
             </div>
         </div>
         <div class="form-group">
@@ -38,20 +41,8 @@
         <div class="form-group">
             <div class="col-sm-2 control-label">订单价格</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="order.orderPrice" placeholder="商品价格"/>
+                <input type="text" class="form-control" v-model="order.orderPrice" placeholder="订单价格"/>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-2 control-label">订单状态</div>
-            <label class="radio-inline">
-                <input type="radio" name="orderStatus" value="1" v-model="order.orderStatus"/> 未支付
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="orderStatus" value="2" v-model="order.orderStatus"/> 已支付
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="orderStatus" value="-1" v-model="order.orderStatus"/> 已取消
-            </label>
         </div>
         <div class="form-group">
             <div class="col-sm-2 control-label"></div>
@@ -62,6 +53,6 @@
 </div>
 </div>
 
-<script src="${request.contextPath}/statics/js/modules/order/order.js?_${.now?long}"></script>
+<script src="${request.contextPath}/statics/js/modules/order/orderReport.js?_${.now?long}"></script>
 </body>
 </html>
