--- a/blg-security/blg-admin/src/main/resources/templates/modules/prod/prod.html
+++ b/blg-security/blg-admin/src/main/resources/templates/modules/prod/prod.html
@@ -3,6 +3,7 @@
 <head>
 <title>商品列表</title>
 <#include "/header.html">
+<script src="${request.contextPath}/statics/libs/ajaxupload.js"></script>
 </head>
 <body>
 <div id="rrapp" v-cloak>
@@ -80,7 +81,7 @@
 			<div class="form-group">
 				<div class="col-sm-2 control-label">商品成色</div>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" v-model="prod.condition" placeholder="商品成色"/>
+					<input type="text" class="form-control" v-model="prod.prodCondition" placeholder="商品成色"/>
 				</div>
 			</div>
 			<div class="form-group">
@@ -93,6 +94,13 @@
 				<div class="col-sm-2 control-label">生产日期</div>
 				<div class="col-sm-10">
 					<input type="date" class="form-control" v-model="prod.produceDateStr" placeholder="生产日期"/>
+				</div>
+			</div>
+			<div>
+				<div class="col-sm-2 control-label">商品图片</div>
+				<div class="col-sm-10">
+				<a class="btn btn-primary" id="upload"><i class="fa fa-plus"></i>&nbsp;上传图片</a>
+					<input type="hidden" class="form-control" v-model="prod.imagePath"  placeholder="商品图片" />
 				</div>
 			</div>
 			<div class="form-group">
