--- a/blg-security/blg-admin/src/main/resources/templates/modules/sys/userAddress.html
+++ b/blg-security/blg-admin/src/main/resources/templates/modules/sys/userAddress.html
@@ -12,9 +12,6 @@
 				<input type="text" class="form-control" v-model="q.userName" @keyup.enter="query" placeholder="用户名">
 			</div>
 			<a class="btn btn-default" @click="query">查询</a>
-			<#if shiro.hasPermission("sys:userAddress:save")>
-			<a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;新增</a>
-			</#if>
 			<#if shiro.hasPermission("sys:userAddress:update")>
 			<a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
 			</#if>
@@ -32,8 +29,7 @@
 			<div class="form-group">
 				<div class="col-sm-2 control-label">用户名</div>
 				<div class="col-sm-10">
-					<!--<input type="text" class="form-control" v-model="userAddress.userName" placeholder="用户名"/>-->
-					<input type="text" class="form-control" style="cursor:pointer;" v-model="userAddress.userName" @click="userIframe" readonly="readonly" placeholder="用户名"/>
+					<input type="text" class="form-control" style="cursor:pointer;" v-model="userAddress.userName" readonly="readonly" placeholder="用户名"/>
 
 				</div>
 			</div>
@@ -80,17 +76,21 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<div class="col-sm-2 control-label">是否默认</div>
+				<label class="radio-inline">
+					<input type="radio" name="isDefault" value="0" v-model="userAddress.isDefault"/> 是
+				</label>
+				<label class="radio-inline">
+					<input type="radio" name="isDefault" value="1" v-model="userAddress.isDefault"/> 否
+				</label>
+			</div>
+			<div class="form-group">
 				<div class="col-sm-2 control-label"></div>
 				<input type="button" class="btn btn-primary" @click="saveOrUpdate" value="确定"/>
 				&nbsp;&nbsp;<input type="button" class="btn btn-warning" @click="reload" value="返回"/>
 			</div>
 		</form>
 	</div>
-</div>
-
-<!-- 选择用户 -->
-<div id="userLayer" style="display: none;padding:10px;">
-	<div id="userIframe" class="panel-heading"></div>
 </div>
 
 <script src="${request.contextPath}/statics/js/modules/sys/userAddress.js?_${.now?long}"></script>
